5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1836_2602.log
== TEST (2019-06-18 21:24:44) 
-- CODE:
from numpy import *
from numpy.
-- ERROR:
File "XXXX", line 2
    from numpy.
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 21:53:27) 
-- CODE:
from numpy import *
from numpy.linalg import*

alimento = array(eval(input("Alimentos: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 21:55:37) 
-- CODE:
from numpy import *
from numpy.linalg import*

alimento = array(eval(input("Alimentos: ")))

print("estafilococo: ", round(preco[0], 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 21:56:07) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))

print("estafilococo: ", round(preco[0], 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 21:57:36) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,4 ], [1 , 2 , 0 ], [2 , 3 , 2 ]])

print("estafilococo: ", round(preco[0], 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 21:58:24) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,2 ], [1 , 2 , 3], [4 , 0 , 2 ]])

x = p
print("estafilococo: ", round(preco[0], 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 21:59:28) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,2 ], [1 , 2 , 3], [4 , 0 , 2 ]])

x = preco / alimento
print("estafilococo: ", round(preco[0], 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 21:59:55) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,2 ], [1 , 2 , 3], [4 , 0 , 2 ]])

x = preco[0] / alimento [0]
print("estafilococo: ", round(x, 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 22:01:05) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,2 ], [1 , 2 , 3], [4 , 0 , 2 ]])

x = preco[0] / alimento [0] 
print(x)
print("estafilococo: ", round(preco[0] , 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 22:01:39) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,2 ], [1 , 2 , 3], [4 , 0 , 2 ]])

x = preco[0] / sum(alimento [0]) 
print(x)
print("estafilococo: ", round(preco[0] , 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 22:02:16) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,2 ], [1 , 2 , 3], [4 , 0 , 2 ]])

x = preco[0] / sum(alimento [0]) 
print(x)
y = preco[1] / sum(alimento [1]) 
print(y)

print("estafilococo: ", round(preco[0] , 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 22:02:34) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,2 ], [1 , 2 , 3], [4 , 0 , 2 ]])

x = preco[0] / sum(alimento [0]) 
print(x)
y = preco[1] / sum(alimento [1]) 
print(y)

print("estafilococo: ", round(preco[0] , 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 22:02:49) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,2 ], [1 , 2 , 3], [4 , 0 , 2 ]])

x = size(preco[0]) / sum(alimento [0]) 
print(x)
y = preco[1] / sum(alimento [1]) 
print(y)

print("estafilococo: ", round(preco[0] , 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 00:52:33) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,2 ], [1 , 2 , 3], [4 , 0 , 2 ]])

print("estafilococo: ", round(preco[0] , 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 00:53:37) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,2 ], [1 , 2 , 3], [4 , 0 , 2 ]])

x = preco . alimento

print("estafilococo: ", round(preco[0] , 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 00:53:49) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,2 ], [1 , 2 , 3], [4 , 0 , 2 ]])

x = preco * alimento

print("estafilococo: ", round(preco[0] , 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 00:54:00) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,2 ], [1 , 2 , 3], [4 , 0 , 2 ]])

x = preco * alimento
print(x)
print("estafilococo: ", round(preco[0] , 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 00:55:33) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,4 ], [1 , 2 , 0], [2 , 3 , 2 ]])

x = preco * alimento
print(x)
print("estafilococo: ", round(preco[0] , 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 00:56:03) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,4 ], [1 , 2 , 0], [2 , 3 , 2 ]])

x = preco / alimento
print(x)
print("estafilococo: ", round(preco[0] , 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 00:56:08) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,4 ], [1 , 2 , 0], [2 , 3 , 2 ]])

x = preco / alimento
print(x)
print("estafilococo: ", round(preco[0] , 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 00:57:05) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,4 ], [1 , 2 , 0], [2 , 3 , 2 ]])

x = alimento /preco
print(x)
print("estafilococo: ", round(preco[0] , 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 00:57:12) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,4 ], [1 , 2 , 0], [2 , 3 , 2 ]])

x = alimento /preco
print(x)
print("estafilococo: ", round(preco[0] , 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 09:55:31) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,4 ], [1 , 2 , 0], [2 , 3 , 2 ]])

x = alimento /preco
print(x)
print("estafilococo: ", round(preco[0] , 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

y = alimento[i,:] * preco
print(y)





if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 09:56:23) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,4 ], [1 , 2 , 0], [2 , 3 , 2 ]])

x = alimento /preco
print(x)
print("estafilococo: ", round(preco[0] , 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))
for i range(size(alimento)):
	y = alimento[i,:] * preco
print(y)





if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
File "XXXX", line 12
    for i range(size(alimento)):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 09:57:30) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,4 ], [1 , 2 , 0], [2 , 3 , 2 ]])

x = preco /alimento
print(x)
print("estafilococo: ", round(preco[0] , 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 09:58:00) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,4 ], [1 , 2 , 0], [2 , 3 , 2 ]])
while(alimento!=0):
	x = preco /alimento
print(x)
print("estafilococo: ", round(preco[0] , 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:28:47) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,4 ],
						[1 , 2 , 0], 
						[2 , 3 , 2 ]])

print(x)
print("estafilococo: ", round(preco[0] , 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:29:06) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,4 ],
						[1 , 2 , 0], 
						[2 , 3 , 2 ]])

print("estafilococo: ", round(preco[0] , 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:30:29) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,4 ],
						[1 , 2 , 0], 
						[2 , 3 , 2 ]])

r = dot(inv(alimento),preco.T)


print("estafilococo: ", round(preco[0] , 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))


if preco[0] == max(preco):
    print("estafilococo")
elif preco[1] == max(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:31:11) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,4 ],
						[1 , 2 , 0], 
						[2 , 3 , 2 ]])

r = dot(inv(alimento),preco.T)


print("estafilococo: ", round(preco[0] , 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))


if preco[0] == min(preco):
    print("estafilococo")
elif preco[1] == min(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:31:50) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,4 ],
						[1 , 2 , 0], 
						[2 , 3 , 2 ]])

r = dot(inv(alimento),preco.T)


print("estafilococo: ", round(r[0] , 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))


if preco[0] == min(preco):
    print("estafilococo")
elif preco[1] == min(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:32:03) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,4 ],
						[1 , 2 , 0], 
						[2 , 3 , 2 ]])

r = dot(inv(alimento),preco.T)


print("estafilococo: ", round(r[0] , 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))


if r[0] == min(preco):
    print("estafilococo")
elif r[1] == min(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 12:32:12) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,4 ],
						[1 , 2 , 0], 
						[2 , 3 , 2 ]])

r = dot(inv(alimento),preco.T)


print("estafilococo: ", round(r[0] , 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))


if r[0] == min(preco):
    print("estafilococo")
elif r[1] == min(preco):
    print("salmonela")
else:
    print("coli")
-- EXECUTION TIME:
0.956832
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
coli
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
coli
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:32:23) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,4 ],
						[1 , 2 , 0], 
						[2 , 3 , 2 ]])

r = dot(inv(alimento),preco.T)


print("estafilococo: ", round(r[0] , 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))


if r[0] == min(preco):
    print("estafilococo")
elif r[1] == min(preco):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:32:52) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,4 ],
						[1 , 2 , 0], 
						[2 , 3 , 2 ]])

r = dot(inv(alimento),preco.T)


print("estafilococo: ", round(r[0] , 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))


if r[0] == min(preco):
    print("estafilococo")
elif r[1] == min(preco):
    print("salmonela")
elif r[2]== min(preco) :
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:33:07) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,4 ],
						[1 , 2 , 0], 
						[2 , 3 , 2 ]])

r = dot(inv(alimento),preco.T)


print("estafilococo: ", round(r[0] , 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))


if r[0] == min(r):
    print("estafilococo")
elif r[1] == min(r):
    print("salmonela")
elif r[2]== min(r) :
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 12:33:16) 
-- CODE:
from numpy import *
from numpy.linalg import*

preco = array(eval(input("Alimentos: ")))
alimento = array([[ 2, 1 ,4 ],
						[1 , 2 , 0], 
						[2 , 3 , 2 ]])

r = dot(inv(alimento),preco.T)


print("estafilococo: ", round(r[0] , 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))


if r[0] == min(r):
    print("estafilococo")
elif r[1] == min(r):
    print("salmonela")
elif r[2]== min(r) :
    print("coli")
-- EXECUTION TIME:
1.06894
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
